# sidecar-bug

./: README.md  build.sh  package-lock.json  package.json  pnpm-lock.yaml
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
src-tauri/resources/: redis.conf
