[package]
name = "sidecar-bug"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }



[dependencies]
tauri = {version = "1.2", features = ["api-all", "devtools", "process-command-api"] }
futures-util = "0.3.26"

[features]
default = ["custom-protocol"]



custom-protocol = ["tauri/custom-protocol"]

